[package]
name = "vga-figures"
version = "0.2.1"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "Library for drawing various shapes"
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/deadblackclover/vga-figures"
repository = "https://github.com/deadblackclover/vga-figures"
keywords = ["vga", "figures", "no_std"]
categories = ["no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vga = "0.2.9"
