[package]
name = "testing"
version = "0.1.0"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
edition = "2018"

[dependencies]
bootloader = "0.9"
vga = "0.2.9"
vga-figures = { path = "../" }

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
